[package]
name = "clip_ranking"
version = "0.1.0"
authors = ["conf8o <41929738+conf8o@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
once_cell = "1.8.0"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
chrono = "0.4.19"

